setting up register and login frontend

--- a/clipr/src/Components/Register/Register.scss
+++ b/clipr/src/Components/Register/Register.scss
@@ -9,7 +9,7 @@
     .user-icon{
         font-size: 54px;
         margin-left: 43%;
-        color: #02024a;
+        color: #34495e;
      }
 
      .login-link{
