--- a/clipr/src/Components/Navbar/Navbar.scss
+++ b/clipr/src/Components/Navbar/Navbar.scss
@@ -14,6 +14,11 @@
 
   .title > h4 {
     margin-left: 2rem;
+    cursor: pointer;
+
+    &:hover {
+      opacity: 0.7;
+    }
   }
 
   .search-box {
@@ -24,6 +29,13 @@
     padding: 3px 5px;
     color: #fff;
     border: 1px solid gray;
+
+    .search-icon {
+      cursor: pointer;
+      &:hover {
+        opacity: 0.7;
+      }
+    }
   }
 
   .search-box > input {
