--- a/clipr/src/Components/Info/Info.scss
+++ b/clipr/src/Components/Info/Info.scss
@@ -2,7 +2,7 @@
     .landing {
       flex-direction: column;
       align-items: center;
-      margin-top: 50px;
+      margin-top: 15vh;
       text-align: center;
       position: relative;
       line-height: 70px;
