--- a/clipr/src/Components/Navbar/Navbar.scss
+++ b/clipr/src/Components/Navbar/Navbar.scss
@@ -6,15 +6,21 @@
   justify-content: start;
   align-items: center;
   color: #fff;
+  position: fixed;
+  z-index: 2;
+  top: 0vh;
+  width: 100%;
 
   .title {
     flex: 0.3;
     font-size: 2rem;
   }
 
-  .title > h4 {
-    margin-left: 2rem;
-    cursor: pointer;
+  .title {
+    h4 {
+      margin-left: 2rem;
+      cursor: pointer;
+    }
 
     &:hover {
       opacity: 0.7;
@@ -72,4 +78,10 @@
       opacity: 0.7;
     }
   }
+}
+
+.scrolled {
+  z-index: 2;
+  background-color: #222629;
+  width: 100%;
 }
