--- a/clipr/src/Components/Login/Login.scss
+++ b/clipr/src/Components/Login/Login.scss
@@ -3,7 +3,7 @@
   max-width: 400px;
   padding: 30px;
   justify-content: center;
-  margin: 20px auto auto;
+  margin: 15vh auto auto;
 
   .user-icon {
     font-size: 54px;
@@ -18,4 +18,8 @@
   .register-link:hover {
     color: #4285f4;
   }
+
+  p{
+    font-size: 18px;
+}
 }
