--- a/clipr/src/Components/Register/Register.scss
+++ b/clipr/src/Components/Register/Register.scss
@@ -1,10 +1,9 @@
 .sign-up{
-
     color: black;
     max-width: 400px;
     padding: 30px;
     justify-content: center;
-    margin: 20px auto auto;
+    margin: 15vh auto auto;
 
     .user-icon{
         font-size: 54px;
@@ -18,6 +17,10 @@
 
     .login-link:hover{
         color:#4285f4;
+    }
+
+    p{
+        font-size: 18px;
     }
 
   
