--- a/clipr/src/Components/VideoPlayer/VideoPlayer.scss
+++ b/clipr/src/Components/VideoPlayer/VideoPlayer.scss
@@ -1,44 +1,42 @@
-.video-container {
-  margin-top: 15vh;
-  height: 100vh;
-  width: 100%;
-  position: relative;
+.video-content {
+  //position: absolute;
+  margin-left: 10%;
+  padding: 10px;
+  .video-player {
+    width: 805px;
+    height: 453px;
+  }
 
+
+  
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
   .video-content {
-    position: absolute;
-    margin-left: 10%;
-
+    margin: 0 auto auto;
     .video-player {
-      width: 805px;
-      height: 453px;
+      width: 427px;
+      height: 240px;
     }
   }
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
-  .video-container {
-    .video-content {
-
-      .video-player {
-        margin: 0 auto auto;
-
-        width: 427px;
-        height: 240px;
-      }
+@media (min-width: 480px) and (max-width: 737px) {
+  .video-content {
+    .video-player {
+      width: 661px;
+      height: 372px;
     }
   }
 }
 
 @media (min-width: 480px) and (max-width: 1200px) {
-  .video-container {
-    .video-content {
+  .video-content {
+    margin: 0 auto auto;
 
-      .video-player {
-        margin: 0 auto auto;
-
-        width: 709px;
-        height: 399px;
-      }
+    .video-player {
+      width: 709px;
+      height: 399px;
     }
   }
 }
