--- a/clipr/src/Pages/VideoPage/VideoPage.scss
+++ b/clipr/src/Pages/VideoPage/VideoPage.scss
@@ -4,6 +4,24 @@
     //width: 100%;
    // position: relative;
     //margin-left: 0px;
+    color: black;
+
+    .comment-action{
+        cursor: pointer;
+        margin-left: 10%;
+        color: blue;
+
+        &:hover{
+            opacity: 0.7;
+        }
+        margin-bottom: 0px;
+    }
+
+
+
+    a{
+        color: blue;
+    }
 
     .comments{
         justify-content: center;
