--- a/clipr/src/Components/Alert/Alert.scss
+++ b/clipr/src/Components/Alert/Alert.scss
@@ -2,6 +2,7 @@
   border-radius: 5px;
   padding: 4px;
   margin-bottom: 10px;
+  background-color: rgba(255,99,132,0.4);
 
   p {
     justify-content: center;
